# Week06---Sysvar-Instructions-Memory-Optimizatio

./: README.md
instruction-ordering/: Anchor.toml
instruction-ordering/programs/instruction-ordering/: Cargo.toml
instruction-ordering/programs/instruction-ordering/src/: lib.rs
instruction-ordering/tests/: instruction-ordering.ts
